--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -18,7 +18,35 @@ body {
   color: #545149;
   background-color: #f4f1ec;
   font-size: 24px;
+  font-family: "Source Sans Pro", sans-serif;
+  font-size: 24px;
+  display: flex;
+  flex-direction: column;
 }
+main {
+width: 90%;
+display: flex;
+align-items: center;
+color: #545149;
+background-color: #f4f1ec;
+}
+.container {
+  display: flex;
+  width: 90%;
+  margin-left: 5%;
+  margin-right: 5%;
+  flex-direction: column;
+  align-items: center;
+  color: #545149;
+background-color: #f4f1ec;
+}
+.logo {    
+  font-family: "Bungee", sans-serif;
+  
+
+
+
+} 
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
