--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -11,3 +11,13 @@ header {
 /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
 
 }
+img.headImage {
+  border: 4px solid rgb(40, 28, 28);
+}
+
+span.headName {
+  font-size: 35px;
+  color: white;
+  text-shadow: 0 1px 0 #ccc;
+
+}
