--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,31 +1,63 @@
+/* navigation bar code */
 nav {
-  height: 120px;
+  height: 190px;
   width: 100%;
+  font-family: Bungee, sans-serif;
   background-color: #4056A1;
   color: #FFFFFF;
-  display:flex;
+  display: flex;
   padding: 1.5em;
   justify-content: space-between;
-  
-  
+
+
 }
 
-.logo{
+/* tweeter logo specifications */
+.logo {
   display: flex;
   font-family: 'Bungee', cursive;
-  font-size: 3rem;
+  font-size: 2em;
   align-items: flex-end;
 
 }
-.right-nav {
-  font-family: 'Source Sans Pro', sans-serif;
+
+
+/* newTweet specifications */
+div.newTweet {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-div.newTweet{
+/* hover specs */
+div.newTweet:hover {
+  font-weight: bold
+}
+
+/* down arrow specifications and bouncy animation content */
+#down-arrow {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  justify-content: center;
+  color: crimson;
+  font-size: 1.5em;
+  font-weight: 600;
+  padding-top: 10px;
+  animation: bounce 2s linear infinite;
+}
+
+
+
+@keyframes bounce {
+  0% {
+    transform: scale(1, 1) translateY(0);
+  }
+
+  25% {
+    transform: scale(1.1) translateY(0);
+  }
+
+  50% {
+    transform: scale(1.1) translateY(-10px);
+  }
+
 }
