--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -34,7 +34,7 @@ h2 {
   justify-content: space-between;
 }
 
-/* cellphones and tablets: maximum width of 768px. allows flexibilty in app viewing and structure intact*/
+/* cellphones and tablets: maximum width of 1024px. allows flexibilty in app viewing and structure integrity*/
 @media only screen and (max-width: 1024px) {
   .tweet-page {
     display: flex;
