--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,5 +1,9 @@
-section.new-tweet {
-  padding-bottom: 50px;
+.new-tweet {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 1em;
+  
 }
 
 label.tweetHeader {
@@ -8,21 +12,30 @@ label.tweetHeader {
 
 textarea#tweet-text {
   display: flex;
-  font-family:Source Sans Pro , sans-serif;
+  font-family: Source Sans Pro, sans-serif;
   outline: none;
   border-width: 0 0 4px;
-  background-color: beige;
+  background-color: rgb(233, 234, 240);
   width: 100%;
-  height: 40px;
-  font-size: 20px;
+  height: 60px;
+  font-size: 40px;
+  
+}
+:placeholder {
+  font-weight: bold;
+  margin-left: 50px;
+  vertical-align: bottom;
+  font-size: large;
 }
 
 div.errorMessage {
-font: 20px bold;
-margin-bottom: 2px;
-color:firebrick;
-visibility: hidden;
-
+  font: 20px bold;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  color: firebrick;
+  visibility: hidden;
+  border-radius: 10px;
+  align-items: center;
 }
 
 div.submit-section {
@@ -30,16 +43,18 @@ div.submit-section {
   justify-content: space-between;
   align-items: center;
   font-family: 'Bungee', cursive;
+  color: blue
 }
 
 button.tweet-btn {
-  color: white;
+  color: rgb(72, 30, 197);
   background-color: #4056A1;
   border: none;
+  width: 75%
 }
 
 button.tweet-btn:hover {
-  color: white;
+  color: rgb(74, 56, 175);
   background-color: #2b47a3;
-  border: none;
+  border: solid 2px #000;
 }
